--- a/views/splashscreen.html
+++ b/views/splashscreen.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css"/>
-    <title>LectureLink</title>
+  <meta charset="UTF-8">
+  <title>Scriptomania|Home </title>
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+  
+       <link rel="stylesheet" href="./css/home.css">
+
+  
 </head>
 
-<body style="margin: 0;">
-    <div class="container">
-        <img src="img/fbg-01-01.png" width=100%>
-        <a href="/users/register">
-        <button class="batn" style="width: 40%">
-            
-                <p class="NormalCharacterStyle">GO TO LECTURE LINK</p>
+<body style="background: orange">
+<div class="title">
+<h1>Scriptomania <img src="./img/scripto.png" alt="Logo" width="80" height="80"></h1>
+</div>
+<h2>Welcome to Scriptomania</h2>
+<p>In <b>Pakistan</b>, the film industry is in its development stage and lacks the platform and a way to link script writers to the film industry. So, our web app plays essential role in the development of our film industry. In this way, many people who are passionate about writing will get a chance to showcase their talent to famous producers of Pakistan’s film industry. It will increase the employment opportunities in the digital sector of our country and would reduce the problem of unemployment in our country. The producers can find some quality work without the
+headache of meeting script writers personally which will save their valuable time.
+</p>
 
-        </button>
-        </a>
-        <div class="st1">
-            <p class="NormalCharacterStyle2">|   Contact us at fakeassemail@gmail.com</p>
-        </div>
-    </div>
+<table>
+  <tr>
+    <td>
+      <button>Already have an account? Click to login</button>
+    </td>
+
+  </tr>
+  <tr>
+    <td>
+  <button>Click here to register</button>
+</td>
+</tr>
+</table>
+  
+
 </body>
 
 </html>
