Add useful message

--- a/views/splashscreen.html
+++ b/views/splashscreen.html
@@ -25,13 +25,13 @@ headache of meeting script writers personally which will save their valuable tim
 <table>
   <tr>
     <td>
-      <button><a href="login">ٓAlready have an account? Click to login</button>
+      <button><a href="/users/login">ٓAlready have an account? Click to login</button>
     </td>
 
   </tr>
   <tr>
     <td>
-  <button><a href="signup">ٓClick here to register</button>
+  <button><a href="/users/signup">ٓClick here to register</button>
 </td>
 </tr>
 </table>
