Add useful message

--- a/views/splashscreen.html
+++ b/views/splashscreen.html
@@ -13,11 +13,11 @@
   
 </head>
 
-<body style="background: orange">
+<body style="background: white">
 <div class="title">
 <h1>Scriptomania <img src="./img/scripto.png" alt="Logo" width="80" height="80"></h1>
 </div>
-<h2>Welcome to Scriptomania</h2>
+<h2 style="margin-left: 10px">Welcome to Scriptomania</h2>
 <p>In <b>Pakistan</b>, the film industry is in its development stage and lacks the platform and a way to link script writers to the film industry. So, our web app plays essential role in the development of our film industry. In this way, many people who are passionate about writing will get a chance to showcase their talent to famous producers of Pakistan’s film industry. It will increase the employment opportunities in the digital sector of our country and would reduce the problem of unemployment in our country. The producers can find some quality work without the
 headache of meeting script writers personally which will save their valuable time.
 </p>
@@ -25,13 +25,13 @@ headache of meeting script writers personally which will save their valuable tim
 <table>
   <tr>
     <td>
-      <button><a href="/users/login">ٓAlready have an account? Click to login</button>
+      <button class="btns"><a href="/users/login">Already have an account? Click here to login</a></button>
     </td>
 
   </tr>
   <tr>
     <td>
-  <button><a href="/users/signup">ٓClick here to register</button>
+  <button class="btns"><a href="/users/signup">Don't have an account? ٓClick here to register</button>
 </td>
 </tr>
 </table>
