--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,5 +7,16 @@ table{
 	text-align: center;
 	margin-left:auto; 
     margin-right:auto;
-    background: white
+    background-color: blue
+    width:300px;
+    height: 200px;
+}
+p{
+	width: 30%;
+	margin-left:10px; 
+    margin-right:10px;
+}
+
+.btns{
+	width: 60%
 }
