--- a/views/splashscreen.html
+++ b/views/splashscreen.html
@@ -13,7 +13,7 @@
   
 </head>
 
-<body style="background: white">
+<body>
 <div class="title">
 <h1>Scriptomania <img src="./img/scripto.png" alt="Logo" width="80" height="80"></h1>
 </div>
@@ -36,7 +36,6 @@ headache of meeting script writers personally which will save their valuable tim
 </tr>
 </table>
   
-
 </body>
-
+<footer>©2019 Scriptomania, Inc.</footer>
 </html>
