--- a/views/splashscreen.html
+++ b/views/splashscreen.html
@@ -14,28 +14,54 @@
 </head>
 
 <body>
-<div class="title">
-<h1>Scriptomania <img src="./img/scripto.png" alt="Logo" width="80" height="80"></h1>
+<div>
+<h1 class = "hero1">Scriptomania <img src="./img/scripto.png" alt="Logo" width="80" height="80"></img></h1>
 </div>
-<h2 style="margin-left: 10px">Welcome to Scriptomania</h2>
-<p>In <b>Pakistan</b>, the film industry is in its development stage and lacks the platform and a way to link script writers to the film industry. So, our web app plays essential role in the development of our film industry. In this way, many people who are passionate about writing will get a chance to showcase their talent to famous producers of Pakistan’s film industry. It will increase the employment opportunities in the digital sector of our country and would reduce the problem of unemployment in our country. The producers can find some quality work without the
-headache of meeting script writers personally which will save their valuable time.
+<div>
+<h2 class="welcome">Dedicated to Develop Media Industry</h2>
+<p class = "hero">In <b>Pakistan</b>, the film industry is in its development stage and lacks a platform to link script writers to the film industry. Our web app plays essential role in the development of our film industry by letting people who are passionate about writing, showcase their talent to famous producers of Pakistan’s film industry. It will increase the employment opportunities in digital sector of our country. Moreover, the producers can find some quality work without the headache of meeting script writers personally which will save their valuable time.
 </p>
+</div>
 
-<table>
-  <tr>
-    <td>
-      <button class="btns"><a href="/users/login">Already have an account? Click here to login</a></button>
-    </td>
+<div class="mydiv">
 
-  </tr>
-  <tr>
-    <td>
-  <button class="btns"><a href="/users/signup">Don't have an account? ٓClick here to register</button>
-</td>
-</tr>
-</table>
+      <button class="btn"><a class="insidebutton", href="/users/login">Login</a></button></div>
+
+<div class="mydiv">
+  <button class="btn1"><a class="insidebutton", href="/users/signup">Register Now</a></button>
+
+</div>
   
+<section class="row">
+  <div class="grid">
+    <!-- <h2>WRITERS</h2> -->
+    
+    
+    <div class="grid-item1">
+      <h2 class="info">WRITERS</h2>
+      <p class="paragraph">Over 1000+ phenominal writers</p>
+      
+    </div>
+    <!-- <h2>WRITERS</h2> -->
+   
+  
+    <div class="grid-item2">
+      <h2 class="info">PRODUCERS</h2>
+       <p class="paragraph">Over 500+ Producers from all over Pakistan.</p>
+    </div>
+    <!-- <h2>WRITERS</h2> -->
+  
+    
+    <div class="grid-item3">
+       <h2 class="info">CONTACT</h2>
+       <p class="paragraph">phone: +923366597237<br>email: help@scriptomania.com<br>address: 5400, LUMS, Lahore, PK.</p>
+    </div>
+
+  </div>
+</section>
+
+
 </body>
-<footer>©2019 Scriptomania, Inc.</footer>
+<footer class="footer">©2019 Scriptomania, Inc.</footer>
+
 </html>
