--- a/views/comps/login.html
+++ b/views/comps/login.html
@@ -22,9 +22,9 @@
   <h1>Log in to Scriptomania
   </h1>
   </div>
-  <form class="login-form" action="POST" action="#">
+  <form class="login-form" action="POST" action="/users/login">
     <label>
-      <input type="email" name="username" required placeholder="Username">
+      <input type="text" name="username" required placeholder="Username">
     </label>
     <label>
       <input type="password" name="password" required placeholder="Password">
