--- a/views/splashscreen.html
+++ b/views/splashscreen.html
@@ -15,7 +15,9 @@
 
 <body>
 <div>
-<h1 class = "hero1">Scriptomania <img src="./img/scripto.png" alt="Logo" width="80" height="80"></img></h1>
+<h1 class = "hero1">Scriptomania <img src="./img/scripto.png" alt="Logo" width="80" height="80"></img>
+</h1>
+<h3 class="newhero">WHERE DREAMS COME TRUE</h3>
 </div>
 <div>
 <h2 class="welcome">Dedicated to Develop Media Industry</h2>
@@ -41,21 +43,21 @@
       <h2 class="info">WRITERS</h2>
       <p class="paragraph">Over 1000+ phenominal writers</p>
       
-    </div>
+    <!-- </div> -->
     <!-- <h2>WRITERS</h2> -->
    
   
-    <div class="grid-item2">
+    <!-- <div class="grid-item2"> -->
       <h2 class="info">PRODUCERS</h2>
        <p class="paragraph">Over 500+ Producers from all over Pakistan.</p>
-    </div>
+    <!-- </div> -->
     <!-- <h2>WRITERS</h2> -->
   
     
-    <div class="grid-item3">
+    <!-- <div class="grid-item3"> -->
        <h2 class="info">CONTACT</h2>
        <p class="paragraph">phone: +923366597237<br>email: help@scriptomania.com<br>address: 5400, LUMS, Lahore, PK.</p>
-    </div>
+    <!-- </div> -->
 
   </div>
 </section>
