--- a/public/css/home.css
+++ b/public/css/home.css
@@ -64,6 +64,21 @@ body {
 	font-weight: 400; 
 	 font-size: 1vw;
 }
+.newhero{
+	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+	 /*font-size: 30px; */
+	 font-style: normal; 
+	 font-variant: normal; 
+	 font-weight: 400; 
+	 /*line-height: 30px; */
+  color: #fff;
+  /*line-height: px;*/
+  padding: 0px 80px 45px 80px;
+  text-align: center;
+  font-size: 1.5vw;
+  text-transform: uppercase;
+
+}
 .hero1 {
 	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
 	 /*font-size: 30px; */
@@ -73,7 +88,7 @@ body {
 	 line-height: 30px; 
   color: #fff;
   line-height: 44px;
-  padding: 20px 80px 45px 80px;
+  padding: 20px 80px 0px 80px;
   text-align: center;
   font-size: 4vw;
   text-transform: uppercase;
