--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -9,7 +9,7 @@
   <h1>Log in to Scriptomania
   </h1>
   </div>
-  <form class="login-form" action="POST" action="#">
+  <form class="login-form" action="/users/submit_login_form" method="POST">
     <label>
       <input type="email" name="username" required placeholder="Username">
     </label>
