--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -4,7 +4,7 @@
   <h1 >Sign Up to Scriptomania</h1>
   </div>
 <div class="signup_form">
-  <form action="POST">
+  <form action="/users/submit_signup_form" method="POST">
     <label>Name</label>
     <input type="text" name="Name" required placeholder="Name"><br><br>
     <label>Email</label>
