--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -16,20 +16,13 @@
     <label>Date of Birth</label>
     <input type="Date" name="date" required><br><br>
     <label>Username</label>
-    <input type="text" name="Usename" required placeholder="Username"><br><br>
+    <input type="text" name="Username" required placeholder="Username"><br><br>
     <label>Password</label>
     <input type="Password" name="Password" required placeholder="Password"><br><br>
     <label>Confirm password</label>
     <input type="Password" name="ConfirmPassword" required placeholder="Password"><br>
     
-    <div>
-    <label class="labell"><input class="inputt" type="radio" name="Writer"></input>Writer</label>
-    </div>
     
-    <div>
-    <label class="labell"><input class="inputt" type="radio" name="Producer"></input>Producer</label>
-    </div>
-
     <div>
     <label ><input class="input1" type="checkbox" name="Agree"></input>I agree to the terms of use and privacy policy</label>
     </div>
