--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 
-.login-form input[type="email"], .login-form input[type="password"] {
+.login-form input[type="text"], .login-form input[type="password"] {
   width: 100%;
   border: 1px solid #314d89;
   outline: none;
@@ -49,7 +49,7 @@ body {
   font-family: 'Lato', sans-serif;
   cursor: pointer;
 }
-.login-form input[type="email"] {
+.login-form input[type="text"] {
   border-bottom: none;
   border-radius: 4px 4px 0 0;
   padding-bottom: 13px;
