--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -11,7 +11,7 @@
   </div>
   <form class="login-form" action="/users/submit_login_form" method="POST">
     <label>
-      <input type="email" name="username" required placeholder="Username">
+      <input type="text" name="username" required placeholder="Username">
     </label>
     <label>
       <input type="password" name="password" required placeholder="Password">
