--- a/views/comps/signup.html
+++ b/views/comps/signup.html
@@ -37,9 +37,9 @@
     <input type="Password" name="Password" required placeholder="Password"><br><br>
     <label>Confirm password</label>
     <input type="Password" name="ConfirmPassword" required placeholder="Password"><br><br>
-    <input type="radio" name="Writer">
+    <input type="radio" name="user" value="Writer">
     <label>Writer</label>
-    <input type="radio" name="Producer">
+    <input type="radio" name="user" value="Producer">
     <label>Producer</label><br><br>
     <input type="checkbox" name="Agree">
     <label>I agree to the terms of use and privacy policy</label><br>
