--- a/views/comps/writer.html
+++ b/views/comps/writer.html
@@ -24,6 +24,7 @@
 <section>
   
 <div class="mydiv">
+      <button class="btn"><a class="insidebutton", href="/users/up">Upload Script</a></button></div>
 
       <button class="btn"><a class="insidebutton", href="/users/login">Edit Profile</a></button></div>
 
