--- a/views/pages/producer.handlebars
+++ b/views/pages/producer.handlebars
@@ -1,4 +1,3 @@
-
 <head>
   <meta charset="UTF-8">
   <title>Scriptomania|Home </title>
@@ -12,15 +11,12 @@
 </head>
 <STYLE>A {text-decoration: none;} </STYLE>
 <body >
-
-            <div class = "lul">
+	      <div class = "lul">
         		<table  >
         			<tr >
-        				
-
         				<td class="topbtn"><a  class ="insidebutton1 " href="/users/signup">My profile</a></div></td>
 
-        				<td class="topbtn"><a  class ="insidebutton1 " href="/users/signup">Logout</a></div></td>
+        				<td class="topbtn"><a  class ="insidebutton1 " href="/users/signup">Log out</a></div></td>
         			</tr>
         		</table>
             </div>
@@ -29,7 +25,6 @@
 <p>Scriptomania <img src="./scripto.png" alt="Logo" width="80" height="80"></img>
 <p>
 </div>
-
 <h2 class="welcome">Welcome Hamza</h2>
 
 <div class="outer">
@@ -38,14 +33,14 @@
 
 	<div>
 
-    <a class="insidebutton", href="/users/login">  <button class="btn">Edit Profile</button></a></div>
+      <a class="insidebutton", href="/users/login"><button class="btn">Edit Profile</button></a></div>
       <div>
-     <a class="insidebutton", href="/users/signup"> <button class="btn">Upload Scripts</button></a>
+      <a class="insidebutton", href="/users/signup"><button class="btn">Read Scripts</button></a>
 </div>
 <div>
       <a class="insidebutton", href="/users/signup"><button class="btn1">View Transaction History</button></a></div>
 <div>
-      <a class="insidebutton", href="/users/signup"><button class="btn1">View Submitted Scripts</button></a></div>
+      <a class="insidebutton", href="/users/signup"><button class="btn1">View Current Subscription</button></a></div>
 </div>
   
 </div>
