--- a/views/splashscreen.html
+++ b/views/splashscreen.html
@@ -15,9 +15,7 @@
 
 <body>
 <div>
-<h1 class = "hero1">Scriptomania <img src="./img/scripto.png" alt="Logo" width="80" height="80"></img>
-</h1><br>
-<h3 class="newhero">WHERE DREAMS COME TRUE</h3>
+<h1 class = "hero1">Scriptomania <img src="./img/scripto.png" alt="Logo" width="80" height="80"></img></h1>
 </div>
 <div>
 <h2 class="welcome">Dedicated to Develop Media Industry</h2>
@@ -34,8 +32,8 @@
 
 </div>
   
-<section class="row">
-  <div class="grid">
+<!-- <section class="row"> -->
+  <div class="row">
     <!-- <h2>WRITERS</h2> -->
     
     
@@ -60,7 +58,7 @@
     </div>
 
   </div>
-</section>
+<!-- </section> -->
 
 
 </body>
